--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contact",
+  "name": "contactBook",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,11 +12,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "@vueuse/core": "^14.0.0",
+    "crypto-js": "^4.2.0",
     "pinia": "^3.0.3",
+    "uuid": "^13.0.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "sass-embedded": "^1.93.3",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3"
   }
